<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <Button
        android:id="@+id/bDialog"
        android:text="@string/show_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/bDialogButton"
        android:text="@string/show_dialog_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/bDialogOneChoice"
        android:text="@string/show_dialog_one_choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/bDialogLayout"
        android:text="@string/show_dialog_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/bDialogFragment"
        android:text="@string/show_dialog_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/bDialogBottomsheet"
        android:text="@string/show_dialog_bottomsheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>